# rosetta-note

./: README.md
project/Python/: .gitignore
project/Python/FastAPI/: README.md  pyproject.toml
project/Python/FastAPI/noteapp/: crud.py  main.py  models.py  schemas.py
project/Python/FastAPI/noteapp/templates/: 404_note.html  base.html  index.html  login.html  login_success.html  note.html  note_delete.html  note_edit.html  notes.html  notes_create.html  signup.html
project/Python/FastAPI/noteapp/templates/components/: navbar.html
