[project]
name = "noteapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.35",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.2",
]
